added increment_variables set_start_position init_restaurant remove_suffix and clean_string

--- a/bt_nodes/configuration/CMakeLists.txt
+++ b/bt_nodes/configuration/CMakeLists.txt
@@ -39,11 +39,23 @@ list(APPEND plugin_libs init_carry_bt_node)
 add_library(init_receptionist_bt_node SHARED src/configuration/init_receptionist.cpp)
 list(APPEND plugin_libs init_receptionist_bt_node)
 
-add_library(add_guest_to_count_bt_node SHARED src/configuration/add_guest_to_count.cpp)
-list(APPEND plugin_libs add_guest_to_count_bt_node)
+add_library(increment_variable_bt_node SHARED src/configuration/increment_variable.cpp)
+list(APPEND plugin_libs increment_variable_bt_node)
 
 add_library(init_groceries_bt_node SHARED src/configuration/init_groceries.cpp)
 list(APPEND plugin_libs init_groceries_bt_node)
+
+add_library(set_start_position_bt_node SHARED src/configuration/SetStartPosition.cpp)
+list(APPEND plugin_libs set_start_position_bt_node)
+
+add_library(init_restaurant_bt_node SHARED src/configuration/init_restaurant.cpp)
+list(APPEND plugin_libs init_restaurant_bt_node)
+
+add_library(remove_string_suffix_bt_node SHARED src/configuration/remove_string_suffix.cpp)
+list(APPEND plugin_libs remove_string_suffix_bt_node)
+
+add_library(clean_string_bt_node SHARED src/configuration/clean_string.cpp)
+list(APPEND plugin_libs clean_string_bt_node)
 
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
