--- a/bt_nodes/perception/CMakeLists.txt
+++ b/bt_nodes/perception/CMakeLists.txt
@@ -91,6 +91,9 @@ list(APPEND plugin_libs extract_cabinet_place_pose_bt_node)
 add_library(clear_octomap_bt_node SHARED src/perception/clear_octomap.cpp)
 list(APPEND plugin_libs clear_octomap_bt_node)
 
+add_library(switch_yolo_model_bt_node SHARED src/perception/switch_yolo_model.cpp)
+list(APPEND plugin_libs switch_yolo_model_bt_node)
+
 foreach(bt_plugin ${plugin_libs})
 ament_target_dependencies(${bt_plugin} ${dependencies})
 target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
