--- a/robocup_bringup/CMakeLists.txt
+++ b/robocup_bringup/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(motion REQUIRED)
 find_package(perception REQUIRED)
 find_package(attention_system REQUIRED)
 find_package(perception_system REQUIRED)
+find_package(nav2_behavior_tree REQUIRED)
 find_package(backward_ros REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -30,6 +31,7 @@ set(dependencies
   perception
   attention_system
   perception_system
+  nav2_behavior_tree
   backward_ros
 )
 
