--- a/robocup_bringup/config/restaurant/restaurant_params.yaml
+++ b/robocup_bringup/config/restaurant/restaurant_params.yaml
@@ -36,3 +36,4 @@ behaviors_main:
     - filter_entity_bt_node
     - remove_string_suffix_bt_node
     - switch_yolo_model_bt_node
+    - clean_string_bt_node
