--- a/bt_nodes/motion/CMakeLists.txt
+++ b/bt_nodes/motion/CMakeLists.txt
@@ -79,6 +79,9 @@ list(APPEND plugin_libs pan_bt_node)
 add_library(goal_publisher_bt_node SHARED src/motion/navigation/goal_publisher.cpp)
 list(APPEND plugin_libs goal_publisher_bt_node)
 
+add_library(rotate_bt_node SHARED src/motion/base/Rotate.cpp)
+list(APPEND plugin_libs rotate_bt_node)
+
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
   target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
