stickler draft added

--- a/bt_nodes/configuration/CMakeLists.txt
+++ b/bt_nodes/configuration/CMakeLists.txt
@@ -57,6 +57,9 @@ list(APPEND plugin_libs remove_string_suffix_bt_node)
 add_library(clean_string_bt_node SHARED src/configuration/clean_string.cpp)
 list(APPEND plugin_libs clean_string_bt_node)
 
+add_library(init_stickler_bt_node SHARED src/configuration/init_stickler.cpp)
+list(APPEND plugin_libs init_stickler_bt_node)
+
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
   target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
