--- a/robocup_bringup/config/real_time_params.yaml
+++ b/robocup_bringup/config/real_time_params.yaml
@@ -7,9 +7,9 @@ attention_server:
   ros__parameters:
     period: 0.05
     max_yaw: 1.3
-    max_pitch: 0.185
-    max_vel_yaw: 0.5
-    max_vel_pitch: 0.5
+    max_pitch: 0.3 #0.185
+    max_vel_yaw: 0.01
+    max_vel_pitch: 0.01
 
 perception_people_detection:
   ros__parameters:
