--- a/robocup_bringup/config/carry_my_luggage/tiago_nav_params.yaml
+++ b/robocup_bringup/config/carry_my_luggage/tiago_nav_params.yaml
@@ -223,7 +223,7 @@ local_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.45
+        inflation_radius: 0.25
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -245,21 +245,23 @@ local_costmap:
           obstacle_max_range: 2.5
           obstacle_min_range: 0.0
       static_layer:
+        footprint_clearing_enabled: True
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
       clear_people_layer:
         plugin: "nav2_costmap_2d::ClearPeopleLayer"
-        person_radious: 1.0
+        person_radius: 0.5
         person_frame: person_0_filtered
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
+        combination_method: 2
         observation_sources: scan
         scan:
           topic: /scan_raw
           max_obstacle_height: 2.0
           clearing: True
-          marking: True
+          marking: False
           data_type: "LaserScan"
           raytrace_max_range: 3.0
           raytrace_min_range: 0.0
@@ -277,7 +279,7 @@ global_costmap:
       use_sim_time: False
       robot_radius: 0.29
       resolution: 0.05
-      track_unknown_space: true
+      track_unknown_space: false
       plugins: ["static_layer", "inflation_layer", "clear_people_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
@@ -294,17 +296,17 @@ global_costmap:
           obstacle_max_range: 2.5
           obstacle_min_range: 0.0
       static_layer:
+        footprint_clearing_enabled: True
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.40
+        inflation_radius: 0.25
       clear_people_layer:
         plugin: "nav2_costmap_2d::ClearPeopleLayer"
-        person_radious: 1.0
+        person_radius: 0.5
         person_frame: person_0_filtered
-        enabled: True
         
       always_send_full_costmap: True
 
@@ -394,63 +396,3 @@ velocity_smoother:
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
     velocity_timeout: 1.0
-
-slam_toolbox:
-  ros__parameters:
-    angle_variance_penalty: 1.0
-    base_frame: base_footprint
-    ceres_dogleg_type: TRADITIONAL_DOGLEG
-    ceres_linear_solver: SPARSE_NORMAL_CHOLESKY
-    ceres_loss_function: None
-    ceres_preconditioner: SCHUR_JACOBI
-    ceres_trust_strategy: LEVENBERG_MARQUARDT
-    coarse_angle_resolution: 0.0349
-    coarse_search_angle_offset: 0.349
-    correlation_search_space_dimension: 0.5
-    correlation_search_space_resolution: 0.01
-    correlation_search_space_smear_deviation: 0.1
-    debug_logging: false
-    distance_variance_penalty: 0.5
-    do_loop_closing: true
-    enable_interactive_mode: true
-    fine_search_angle_offset: 0.00349
-    link_match_minimum_response_fine: 0.1
-    link_scan_maximum_distance: 1.5
-    loop_match_maximum_variance_coarse: 3.0
-    loop_match_minimum_chain_size: 10
-    loop_match_minimum_response_coarse: 0.35
-    loop_match_minimum_response_fine: 0.45
-    loop_search_maximum_distance: 3.0
-    loop_search_space_dimension: 8.0
-    loop_search_space_resolution: 0.05
-    loop_search_space_smear_deviation: 0.03
-    # map_file_name: /home/juan/workspaces/robocup/install/robocup_bringup/share/robocup_bringup/maps/lab_robocup
-    # map_frame: map
-    map_start_pose:  #     # - 2.0
-#     # - 3.6
-#     # - 3.1416
-    - -2.0
-    - 3.6
-    - 3.1416
-    map_update_interval: 0.1
-    max_laser_range: 20.0
-    minimum_angle_penalty: 0.9
-    minimum_distance_penalty: 0.5
-    minimum_time_interval: 0.1
-    minimum_travel_distance: 0.01
-    minimum_travel_heading: 0.01
-    mode: localization
-    odom_frame: odom
-    resolution: 0.05
-    scan_buffer_maximum_scan_distance: 10.0
-    scan_buffer_size: 10
-    scan_topic: /scan_raw
-    solver_plugin: solver_plugins::CeresSolver
-    stack_size_to_use: 40000000
-    tf_buffer_duration: 30.0
-    throttle_scans: 1
-    transform_publish_period: 0.02
-    transform_timeout: 0.2
-    use_response_expansion: true
-    use_scan_barycenter: true
-    use_scan_matching: true
