Perception model changes on runtime and FindPerson by pose and gesture

--- a/bt_nodes/configuration/CMakeLists.txt
+++ b/bt_nodes/configuration/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(geometry_msgs REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2 REQUIRED)
+find_package(yolov8_msgs REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -26,6 +27,7 @@ set(dependencies
   tf2_geometry_msgs
   tf2
   tf2_ros
+  yolov8_msgs
 )
 
 include_directories(include)
@@ -50,6 +52,15 @@ list(APPEND plugin_libs deferred_bt_node)
 
 add_library(setup_gpsr_bt_node SHARED src/configuration/Setup_gpsr.cpp)
 list(APPEND plugin_libs setup_gpsr_bt_node)
+
+add_library(bt_service_node SHARED src/configuration/bt_service_node.cpp)
+list(APPEND plugin_libs bt_service_node)
+
+add_library(get_perception_model_bt_node SHARED src/configuration/get_perception_model.cpp)
+list(APPEND plugin_libs get_perception_model_bt_node)
+
+add_library(set_perception_model_bt_node SHARED src/configuration/set_perception_model.cpp)
+list(APPEND plugin_libs set_perception_model_bt_node)
 
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
