--- a/robocup_bringup/config/gpsr/gpsr.yaml
+++ b/robocup_bringup/config/gpsr/gpsr.yaml
@@ -7,7 +7,40 @@ behaviors_main:
     offer_pose: "offer"
     person_id: 001122334455
     bt_xml_file: gpsr.xml
-    waypoints_names: ["kitchen", "bathroom", "entrance", "living_room", "bedroom"]
+    waypoints_names:
+      [
+        # "bedroom",
+        # "bed",
+        # "bedside_table",
+        # "dresser",
+        # "kitchen",
+        # "sink",
+        # "fridge",
+        # "dishwasher",
+        # "kitchen_table",
+        # "trash_bin",
+        # "office",
+        # "armchair",
+        # "cabinet",
+        # "desk",
+        # "desk_chair",
+        # "living_room",
+        # "entrance",
+        # "wardrobe",
+        # "sofa",
+        # "tv_sideboard",
+        # "coffee_table",
+        # "bar",
+        # "bookshelf",
+        # "instruction_point",
+        # "corridor",
+        # "exit",
+        "kitchen",
+        "bathroom",
+        "entrance",
+        "living_room",
+        "bedroom"
+      ]
     waypoints:
       kitchen: [3.79, 6.77, 0.12]
       bathroom: [4.89, 1.64, 1.0]
