add filter_object bt_node

--- a/bt_nodes/perception/CMakeLists.txt
+++ b/bt_nodes/perception/CMakeLists.txt
@@ -95,6 +95,9 @@ list(APPEND plugin_libs is_gesturing_bt_node)
 add_library(count_people_bt_node SHARED src/perception/count_people.cpp)
 list(APPEND plugin_libs count_people_bt_node)
 
+add_library(filter_object_bt_node SHARED src/perception/filter_object.cpp)
+list(APPEND plugin_libs filter_object_bt_node)
+
 foreach(bt_plugin ${plugin_libs})
 ament_target_dependencies(${bt_plugin} ${dependencies})
 target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
