--- a/bt_nodes/bt_test/CMakeLists.txt
+++ b/bt_nodes/bt_test/CMakeLists.txt
@@ -167,6 +167,10 @@ target_link_libraries(set_perception_model_test
   configuration::set_perception_model_bt_node
 )
 
+add_executable(filter_object_test src/filter_object_test.cpp)
+ament_target_dependencies(filter_object_test ${dependecies})
+target_link_libraries(filter_object_test perception::filter_object_bt_node)
+
 # gpsr test
 add_executable(gpsr_test src/gpsr_test.cpp)
 ament_target_dependencies(gpsr_test ${dependencies})
@@ -351,6 +355,7 @@ install(TARGETS
   rotate_test
   get_perception_model_test
   set_perception_model_test
+  filter_object_test
   
   gpsr_test
   gpsr_answerquiz_test
