--- a/bt_nodes/configuration/CMakeLists.txt
+++ b/bt_nodes/configuration/CMakeLists.txt
@@ -62,6 +62,12 @@ list(APPEND plugin_libs get_perception_model_bt_node)
 add_library(set_perception_model_bt_node SHARED src/configuration/set_perception_model.cpp)
 list(APPEND plugin_libs set_perception_model_bt_node)
 
+add_library(init_protected_queue_bt_node SHARED src/configuration/init_queue.cpp)
+list(APPEND plugin_libs init_protected_queue_bt_node)
+
+add_library(publish_tf_bt_node SHARED src/configuration/publish_tf.cpp)
+list(APPEND plugin_libs publish_tf_bt_node)
+
 foreach(bt_plugin ${plugin_libs})
   ament_target_dependencies(${bt_plugin} ${dependencies})
   target_compile_definitions(${bt_plugin} PRIVATE BT_PLUGIN_EXPORT)
