added extract pc from class

--- a/bt_nodes/perception/CMakeLists.txt
+++ b/bt_nodes/perception/CMakeLists.txt
@@ -104,8 +104,8 @@ list(APPEND plugin_libs clear_octomap_bt_node)
 add_library(switch_yolo_model_bt_node SHARED src/perception/switch_yolo_model.cpp)
 list(APPEND plugin_libs switch_yolo_model_bt_node)
 
-# add_library(check_policy_bt_node SHARED src/perception/check_policy.cpp)
-# list(APPEND plugin_libs check_policy_bt_node)
+add_library(extract_pc_from_class_bt_node SHARED src/perception/extract_pc_from_class.cpp)
+list(APPEND plugin_libs extract_pc_from_class_bt_node)
 
 foreach(bt_plugin ${plugin_libs})
 ament_target_dependencies(${bt_plugin} ${dependencies})
