--- a/robocup_bringup/config/carry_my_luggage/carry_my_luggage.yaml
+++ b/robocup_bringup/config/carry_my_luggage/carry_my_luggage.yaml
@@ -1,12 +1,13 @@
 behaviors_main:
   ros__parameters:
     use_sim_time: False
-    cam_frame: "head_front_camera_link_color_optical_frame"
+    cam_frame: "head_front_camera_rgb_optical_frame"
     home_position: [0.0, 0.0, 0.0]
     home_pose: "home"
     offer_pose: "offer"
     person_id: 001122334455
     bt_xml_file: carry_my_luggage.xml
+    use_people_filter: False
     plugins:
     - init_carry_bt_node
     - is_detected_bt_node
