--- a/robocup_bringup/config/inspection/tiago_nav_follow_params.yaml
+++ b/robocup_bringup/config/inspection/tiago_nav_follow_params.yaml
@@ -12,7 +12,7 @@ slam_toolbox:
     map_frame: map
     base_frame: base_footprint
     scan_topic: /scan
-    mode: localization
+    mode: mapping #localization
 
     # if you'd like to start localizing on bringup in a map and pose
     #map_file_name: test_steve
@@ -64,4 +64,9 @@ slam_toolbox:
     coarse_angle_resolution: 0.0349        
     minimum_angle_penalty: 0.9
     minimum_distance_penalty: 0.5
+    map_file_name: /home/juan/workspaces/robocup/install/robocup_bringup/share/robocup_bringup/maps/arena_portugal
+    map_start_pose:
+    - 2.0
+    - 3.6
+    - 3.1416
     use_response_expansion: true
