--- a/robocup_bringup/config/inspection/tiago_nav_params.yaml
+++ b/robocup_bringup/config/inspection/tiago_nav_params.yaml
@@ -1,11 +1,11 @@
 amcl:
   ros__parameters:
     use_sim_time: False
-    alpha1: 0.2
-    alpha2: 0.2
-    alpha3: 0.2
-    alpha4: 0.2
-    alpha5: 0.2
+    alpha1: 0.1
+    alpha2: 0.1
+    alpha3: 0.1
+    alpha4: 0.1
+    alpha5: 0.1
     base_frame_id: "base_footprint"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
@@ -14,7 +14,7 @@ amcl:
     global_frame_id: "map"
     lambda_short: 0.1
     laser_likelihood_max_dist: 2.0
-    laser_max_range: 100.0
+    laser_max_range: 5.0
     laser_min_range: -1.0
     laser_model_type: "likelihood_field"
     max_beams: 60
@@ -218,8 +218,8 @@ local_costmap:
       width: 3
       height: 3
       resolution: 0.05
-      robot_radius: 0.275
-      plugins: ["inflation_layer", "clear_people_layer"]
+      robot_radius: 0.29
+      plugins: ["obstacle_layer" ,"inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
@@ -250,7 +250,7 @@ local_costmap:
       clear_people_layer:
         plugin: "nav2_costmap_2d::ClearPeopleLayer"
         person_radious: 1.0
-        person_frame: customer
+        person_frame: person_0_filtered
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -275,10 +275,10 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: False
-      track_unknown_space: False
-      robot_radius: 0.275
+      robot_radius: 0.29
       resolution: 0.05
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer", "clear_people_layer"]
+      track_unknown_space: true
+      plugins: ["static_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -303,7 +303,7 @@ global_costmap:
       clear_people_layer:
         plugin: "nav2_costmap_2d::ClearPeopleLayer"
         person_radious: 1.0
-        person_frame: customer
+        person_frame: person_0_filtered
         enabled: True
         
       always_send_full_costmap: True
