--- a/robocup_bringup/config/receptionist/receptionist_params.yaml
+++ b/robocup_bringup/config/receptionist/receptionist_params.yaml
@@ -1,7 +1,7 @@
 /**:
   ros__parameters:
     use_sim_time: False
-    cam_frame: "head_front_camera_link_color_optical_frame"
+    cam_frame: "head_front_camera_rgb_optical_frame"
     home_position: [0.0, 0.0, 0.0]
     home_pose: "home"
     offer_pose: "offer"
@@ -35,4 +35,4 @@ behaviors_main:
     - increment_variable_bt_node
     - filter_entity_bt_node
     - extract_entity_color_bt_node
-    - spin_bt_node
+    - move_along_axis_bt_node
