--- a/bt_nodes/bt_test/CMakeLists.txt
+++ b/bt_nodes/bt_test/CMakeLists.txt
@@ -142,7 +142,12 @@ target_link_libraries(follow_person_test perception::follow_person_bt_node)
 # find_person test
 add_executable(find_person_test src/find_person_test.cpp)
 ament_target_dependencies(find_person_test ${dependencies})
-target_link_libraries(find_person_test perception::convert_color_bt_node perception::is_detected_bt_node motion::pan_bt_node motion::move_to_bt_node perception::is_gesturing_bt_node)
+target_link_libraries(find_person_test
+                      perception::convert_color_bt_node
+                      perception::is_detected_bt_node
+                      motion::pan_bt_node
+                      motion::move_to_bt_node
+                      perception::is_gesturing_bt_node)
 
 # count person test
 add_executable(count_people_test src/count_people_test.cpp)
@@ -177,7 +182,7 @@ arm::pick_bt_node
 motion::move_to_bt_node
 motion::look_at_bt_node
 motion::configure_navigate_back_bt_node
-motion::pan_bt_node 
+motion::pan_bt_node
 motion::follow_entity_bt_node
 motion::goal_publisher_bt_node
 configuration::deferred_bt_node
@@ -213,7 +218,7 @@ foreach(test ${GPSR_TESTS})
     motion::move_to_bt_node
     motion::look_at_bt_node
     motion::configure_navigate_back_bt_node
-    motion::pan_bt_node 
+    motion::pan_bt_node
     motion::follow_entity_bt_node
     motion::goal_publisher_bt_node
     configuration::deferred_bt_node
@@ -335,7 +340,6 @@ install(TARGETS
   find_person_test
   count_people_test
   rotate_test
-  
   gpsr_test
   gpsr_answerquiz_test
   gpsr_countobject_test
