--- a/bt_nodes/hri/CMakeLists.txt
+++ b/bt_nodes/hri/CMakeLists.txt
@@ -17,7 +17,9 @@ find_package(llama_msgs REQUIRED)
 find_package(moveit_msgs REQUIRED)
 find_package(shape_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(std_srvs REQUIRED)
 find_package(gpsr_msgs REQUIRED)
+find_package(audio_common_msgs REQUIRED)
 set(CMAKE_CXX_STANDARD 17)
 
 set(dependencies
@@ -32,6 +34,8 @@ set(dependencies
   shape_msgs
   std_msgs
   gpsr_msgs
+  std_srvs
+  audio_common_msgs
 )
 
 include_directories(include)
@@ -59,6 +63,12 @@ list(APPEND plugin_libs choose_from_classes_bt_node)
 
 add_library(command_planning_bt_node SHARED src/hri/CommandPlanning.cpp)
 list(APPEND plugin_libs command_planning_bt_node)
+
+add_library(start_music_bt_node SHARED src/hri/start_music.cpp)
+list(APPEND plugin_libs start_music_bt_node)
+
+add_library(stop_music_bt_node SHARED src/hri/stop_music.cpp)
+list(APPEND plugin_libs stop_music_bt_node)
 
 foreach(bt_plugin ${plugin_libs})
 ament_target_dependencies(${bt_plugin} ${dependencies})
