final nav params for inspection

--- a/robocup_bringup/config/inspection/tiago_nav_params.yaml
+++ b/robocup_bringup/config/inspection/tiago_nav_params.yaml
@@ -1,11 +1,11 @@
 amcl:
   ros__parameters:
     use_sim_time: False
-    alpha1: 0.3
-    alpha2: 0.3
-    alpha3: 0.3
-    alpha4: 0.3
-    alpha5: 0.3
+    alpha1: 0.1
+    alpha2: 0.1
+    alpha3: 0.1
+    alpha4: 0.1
+    alpha5: 0.1
     base_frame_id: "base_footprint"
     beam_skip_distance: 0.5
     beam_skip_error_threshold: 0.9
@@ -219,11 +219,11 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.29
-      plugins: ["voxel_layer", "inflation_layer"]
+      plugins: ["obstacle_layer" ,"inflation_layer"]
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.35
+        inflation_radius: 0.55
       voxel_layer:
         plugin: "nav2_costmap_2d::VoxelLayer"
         enabled: True
@@ -278,7 +278,7 @@ global_costmap:
       robot_radius: 0.29
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      plugins: ["static_layer", "inflation_layer"]
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
@@ -299,7 +299,7 @@ global_costmap:
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 3.0
-        inflation_radius: 0.35
+        inflation_radius: 0.40
       clear_people_layer:
         plugin: "nav2_costmap_2d::ClearPeopleLayer"
         person_radious: 1.0
@@ -330,27 +330,7 @@ planner_server:
       plugin: "nav2_navfn_planner/NavfnPlanner"
       tolerance: 0.5
       use_astar: false
-      # allow_unknown: false
-      # plugin: "nav2_smac_planner/SmacPlanner2D" # In Iron and older versions, "/" was used instead of "::"
-      # tolerance: 0.125                      # tolerance for planning if unable to reach exact pose, in meters
-      # downsample_costmap: false             # whether or not to downsample the map
-      # downsampling_factor: 1                # multiplier for the resolution of the costmap layer (e.g. 2 on a 5cm costmap would be 10cm)
-      # allow_unknown: true                   # allow traveling in unknown space
-      # max_iterations: 1000000               # maximum total iterations to search for before failing (in case unreachable), set to -1 to disable
-      # max_on_approach_iterations: 1000      # maximum number of iterations to attempt to reach goal once in tolerance
-      # max_planning_time: 2.0                # max time in s for planner to plan, smooth
-      # cost_travel_multiplier: 10.0          # Cost multiplier to apply to search to steer away from high cost areas. Larger values will place in the center of aisles more exactly (if non-`FREE` cost potential field exists) but take slightly longer to compute. To optimize for speed, a value of 1.0 is reasonable. A reasonable tradeoff value is 2.0. A value of 0.0 effective disables steering away from obstacles and acts like a naive binary search A*.
-      # use_final_approach_orientation: false # Whether to set the final path pose at the goal's orientation to the requested orientation (false) or in line with the approach angle so the robot doesn't rotate to heading (true)
-      # smoother:
-      #   max_iterations: 1000
-      #   w_smooth: 0.3
-      #   w_data: 0.2
-      #   tolerance: 1.0e-10
-      # plugin: "nav2_theta_star_planner/ThetaStarPlanner" # In Iron and older versions, "/" was used instead of "::"
-      # how_many_corners: 8
-      # w_euc_cost: 1.0
-      # w_traversal_cost: 2.5
-      # w_heuristic_cost: 1.0
+      allow_unknown: true
 
 smoother_server:
   ros__parameters:
